--- a/styles/sass/_card.scss
+++ b/styles/sass/_card.scss
@@ -1,9 +1,10 @@
 .Card {
   @include card();
+  min-height: 700px;
+
   .offer-images {
     @include flex(column);
     position: relative;
-    height: 250px;
     width: 100%;
     .btns {
       @include flex(row);
@@ -13,32 +14,36 @@
       .carousel-btn {
       }
     }
-    .of-img {
-      border-radius: 30px;
+    .carousel {
+      width: 100%;
+      .slider {
+        position: relative;
+        background-color: blue;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      }
     }
   }
   .offer-details {
     .offer-title {
       margin: 10px 0;
-      p {
-        font-size: 20px;
-        font-weight: bold;
-        // font-family: "Noto Sans JP", sans-serif;
-      }
+      color: gray;
+      font-size: 25px;
+      font-weight: bold;
+      text-transform: capitalize;
     }
     .price-rank {
       @include flex(row);
       justify-content: space-between;
 
       .price-info {
-        h2 {
-          font-size: 20px;
-          font-weight: bold;
-          color: $main-color1;
-        }
+        color: #000;
+        font-weight: bolder;
+        font-weight: bold;
         p {
-          color: $main-color2;
-          font-weight: bold;
+          color: gray;
+          font-weight: bolder;
         }
       }
 
@@ -116,5 +121,8 @@
         }
       }
     }
+  }
+  &:hover {
+    box-shadow: 1px 1px 8px #00000056;
   }
 }
