--- a/styles/sass/_card.scss
+++ b/styles/sass/_card.scss
@@ -1,7 +1,6 @@
 .Card {
   @include card();
-  min-height: 700px;
-
+  min-height: 650px;
   .offer-images {
     @include flex(column);
     position: relative;
@@ -16,21 +15,22 @@
     }
     .carousel {
       width: 100%;
+
       .slider {
         position: relative;
         background-color: blue;
         width: 100%;
         height: 300px;
         object-fit: cover;
+        border-radius: 50px;
       }
     }
   }
   .offer-details {
     .offer-title {
-      margin: 10px 0;
       color: gray;
-      font-size: 25px;
-      font-weight: bold;
+      font-size: 30px;
+      font-weight: bolder;
       text-transform: capitalize;
     }
     .price-rank {
@@ -39,8 +39,10 @@
 
       .price-info {
         color: #000;
-        font-weight: bolder;
-        font-weight: bold;
+        .price {
+          font-size: 35px;
+          font-weight: bolder;
+        }
         p {
           color: gray;
           font-weight: bolder;
@@ -50,12 +52,18 @@
       .offer-ranking {
         @include flex(row);
         background-color: transparent;
-        border: solid $main-color2 2px;
-        padding: 5px 10px;
-        p {
-          margin-right: 5px;
-          color: $main-color2;
-          font-weight: bold;
+        border: solid #ff0067 4px;
+        border-radius: 5px;
+        padding: 1px 15px;
+        span {
+          @include flex(row);
+          font-size: 30px;
+          p {
+            margin: 0;
+            margin-right: 15px;
+            color: #ff0067;
+            font-weight: bolder;
+          }
         }
       }
     }
@@ -68,57 +76,50 @@
     .landlord-facilities {
       @include flex(row);
       justify-content: space-between;
-
       .landlord {
         @include flex(row);
         .landlord-img {
           position: relative;
-          width: 32px;
-          height: 32px;
+          width: 70px;
+          height: 70px;
           margin-right: 5px;
           object-fit: cover;
           .ld-img {
             border-radius: 50px;
           }
         }
-        .landlord-name {
-          p {
-            color: $main-color2;
+        .landlord-name-username {
+          .landlordName {
+            color: #ff0067;
+            font-weight: bold;
+          }
+          .landlordUsername {
+            color: gray;
+            font-weight: bold;
+            font-size: 20px;
           }
         }
       }
       .facilities {
         @include flex(row);
-        justify-content: space-between;
-        width: 35%;
-        padding: 5px;
-        .facilitie {
+        // padding: 0 35px;
+        .facility {
           @include flex(row);
-          margin: 5px;
+          font-size: 30px;
+          color: gray;
+          font-family: roboto;
+          font-weight: bolder;
         }
       }
     }
-    .datePosted-goToOfferBtn {
+    .datePosted {
       @include flex(row);
       justify-content: space-between;
       margin-top: 10px;
       .date-posted {
-        p {
-          color: rgba(163, 163, 163, 0.972);
-        }
-      }
-      .go-to-offer-btn {
-        button {
-          padding: 10px;
-          border: none;
-          border-radius: 20px 0 20px 0;
-          background-color: $main-color2;
-          color: $main-color3;
-          &:hover {
-            transition: 0.5s;
-            background-color: lighten($main-color2, 10%);
-          }
-        }
+        color: gray;
+        font-weight: bold;
+        font-size: 20px;
       }
     }
   }
