--- a/styles/sass/_forLandlords.scss
+++ b/styles/sass/_forLandlords.scss
@@ -1,7 +1,7 @@
 .ForLandlords {
   @include flex(row);
   width: 100vw;
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
   padding: 20px;
   min-height: 70vh;
   justify-content: space-around;
