--- a/styles/sass/_card.scss
+++ b/styles/sass/_card.scss
@@ -1,6 +1,5 @@
 .Card {
   @include card();
-  min-height: 650px;
   .offer-images {
     @include flex(column);
     position: relative;
@@ -15,10 +14,8 @@
     }
     .carousel {
       width: 100%;
-
       .slider {
         position: relative;
-        background-color: blue;
         width: 100%;
         height: 300px;
         object-fit: cover;
@@ -29,9 +26,10 @@
   .offer-details {
     .offer-title {
       color: gray;
-      font-size: 30px;
+      font-size: 23px;
       font-weight: bolder;
       text-transform: capitalize;
+      margin-top: 10px;
     }
     .price-rank {
       @include flex(row);
@@ -40,7 +38,7 @@
       .price-info {
         color: #000;
         .price {
-          font-size: 35px;
+          font-size: 30px;
           font-weight: bolder;
         }
         p {
@@ -54,10 +52,10 @@
         background-color: transparent;
         border: solid #ff0067 4px;
         border-radius: 5px;
-        padding: 1px 15px;
+        padding: 1px 8px;
         span {
           @include flex(row);
-          font-size: 30px;
+          font-size: 20px;
           p {
             margin: 0;
             margin-right: 15px;
@@ -80,8 +78,8 @@
         @include flex(row);
         .landlord-img {
           position: relative;
-          width: 70px;
-          height: 70px;
+          width: 40px;
+          height: 40px;
           margin-right: 5px;
           object-fit: cover;
           .ld-img {
@@ -92,11 +90,12 @@
           .landlordName {
             color: #ff0067;
             font-weight: bold;
+            font-size: 18px;
           }
           .landlordUsername {
             color: gray;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 15px;
           }
         }
       }
@@ -105,7 +104,7 @@
         // padding: 0 35px;
         .facility {
           @include flex(row);
-          font-size: 30px;
+          font-size: 20px;
           color: gray;
           font-family: roboto;
           font-weight: bolder;
@@ -119,7 +118,7 @@
       .date-posted {
         color: gray;
         font-weight: bold;
-        font-size: 20px;
+        font-size: 15px;
       }
     }
   }
