--- a/styles/sass/_config.scss
+++ b/styles/sass/_config.scss
@@ -54,17 +54,12 @@ $main-black: hsl(0, 0%, 21%);
 }
 
 @mixin card() {
-  height: 520px;
-  min-width: 350px;
+  min-height: 200px;
   background-color: $main-color3;
   border-radius: 20px;
   -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
   box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.205);
-  padding: 30px;
-  &:hover {
-    transition: 0.5s;
-    // transform: scale(1.03);
-  }
+  padding: 40px;
 
   @media screen and (max-width: 640px) {
     min-width: 350px;
