--- a/styles/sass/_offers.scss
+++ b/styles/sass/_offers.scss
@@ -10,11 +10,12 @@
   }
   .offers-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(430px, 1fr));
     row-gap: 20px;
     column-gap: 40px;
     width: 70%;
     margin: 70px auto;
+    background-color: red;
   }
 }
 
